--- a/src/pages/Home/HomePage.module.css
+++ b/src/pages/Home/HomePage.module.css
@@ -3,5 +3,13 @@
   align-items: center;
   justify-content: center;
   width: 100%;
+  min-height: 100%;
+  padding-bottom: 2rem;
+}
+
+@media (max-width: 768px) {
+  .wrapper {
+    padding-bottom: 4rem;
+  }
 }
 
